# domjudge-deploy

./: .editorconfig  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
inventories/: hosts.yml
playbooks/: install_docker.yml  setup_no_password_login.yml  setup_server.yml
playbooks/tasks/: install_and_setup_docker.yml  update_grub_and_reboot.yml
